# gym-snake

./: README.rst  pyproject.toml
gym_snake/: __init__.py  alt_set.py  play.py
gym_snake/envs/: __init__.py  enum.py  snake_env.py  utils.py
